--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  height: 100%;
+  /* background-color: white; */
+}
+
+.app {
+  text-align: 100%;
+}
+
+.todo-card {
+  background-color: blueviolet;
+  padding: 1rem;
+  margin-bottom: 3rem;
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -16,7 +31,7 @@
   }
 }
 
-body {
+/* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -24,7 +39,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
 
 @layer utilities {
   .text-balance {
